--- a/hook-form/src/index.css
+++ b/hook-form/src/index.css
@@ -16,17 +16,16 @@
 
 a {
   font-weight: 500;
-  color: #9f1a8f;
+  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #9f1a8f;
+  color: #535bf2;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -48,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #9f1a8f;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
@@ -61,7 +60,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #9F1A8F;
+    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
